whyred: defconfig: Enable ICMP_DISABLE_PS
Change-Id: Ic77a802e63293f84eeaab4b757d4302c7899659a

--- a/arch/arm64/configs/whyred-perf_defconfig
+++ b/arch/arm64/configs/whyred-perf_defconfig
@@ -626,6 +626,7 @@ CONFIG_MCC_TO_SCC_SWITCH=y
 CONFIG_QCACLD_WLAN_LFR2=y
 CONFIG_WLAN_FEATURE_DISA=y
 CONFIG_WLAN_SPECTRAL_SCAN=y
+CONFIG_ICMP_DISABLE_PS=y
 CONFIG_WLAN_FEATURE_FILS=y
 CONFIG_QPNP_REVID=y
 CONFIG_QPNP_COINCELL=y
